Fix spacing and title styles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3442,7 +3442,7 @@ input, select, textarea {
 				letter-spacing: 0.1em;
 				line-height: 2;
 				text-transform: uppercase;
-				margin-top: 1em; /* add small space above the paragraph */
+				margin-top: 0em; /* add small space above the paragraph */
 			}
 
 		@media screen and (max-width: 1280px) {
